# langchain-rust

./: .gitignore  Cargo.toml  build.rs
examples/: embedding_aws_bedrock.rs  llm_aws_bedrock.rs  llm_burn_local.rs
src/embedding/: mod.rs
src/embedding/bedrock/: bedrock_embedder.rs  mod.rs
src/embedding/fastembed/: fastembed.rs
src/embedding/openai/: openai_embedder.rs
src/language_models/: error.rs  options.rs
src/llm/: mod.rs
src/llm/bedrock/: bedrock.rs  errors.rs  mod.rs  qwen_chat_template.rs
src/llm/burn/: burn_llm.rs  config.rs  errors.rs  mod.rs  qwen3_model.rs  tokenizer.rs
src/llm/openai/: mod.rs
